# yolov5-coreml-tools

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml
objectDetectionMetrics/: BoundingBox.py  BoundingBoxes.py  Evaluator.py  LICENSE  utils.py
src/coreml_export/: main.py  snippets.py  test.py
src/coreml_metrics/: main.py
