[tool.poetry]
name = "coreml-tools"
version = "0.2.1"
description = "Different scripts to use YOLOv5 with coreml"
authors = ["Leon De Andrade"]
license = "Proprietary"
readme = "README.md"
packages = [
    { include = "coreml_export", from = "src"}
]

[tool.poetry.dependencies]
# Common
python = ">=3.7, <3.9"

# coreml export 
coremltools = "^4.0"
# yolov5 = { path = "../yolov5", develop = false }
yolov5 = { git = "", branch = "ios-yolov5-v2" } 

# Workaround for Windows
torch = [
    {version = "=1.6.0", markers="sys_platform != 'win32'"},
    # {url = "https://download.pytorch.org/whl/cu102/torch-1.6.0-cp38-cp38-win_amd64.whl", python = "~3.8", markers = "sys_platform == 'win32'"}
]
torchvision = [
    {version = "=0.7.0",  markers = "sys_platform != 'win32'"},
    # {url = "https://download.pytorch.org/whl/cu102/torchvision-0.7.0-cp38-cp38-win_amd64.whl", python = "~3.8", markers = "sys_platform == 'win32'"}
]

[tool.poetry.scripts]
coreml-export = "coreml_export.main:main"
coreml-test = "coreml_export.test:main"
coreml-metrics = "coreml_metrics.main:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"